--- a/demo.ipynb
+++ b/demo.ipynb
@@ -20,8 +20,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "fb0ec61b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('2023')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3663957e",
    "metadata": {},
    "outputs": [],
    "source": []
